@@ -1,3 +1,12 @@
+2005-08-03  johnsu01  <john@wjsullivan.net>
+
+	* delicious.el (delicious-build-posts-list): Added FORCE argument
+	to force a refresh from the server. Provide better information
+	about which source the posts are being updated from. Check to make
+	sure that both FORCE and OFFLINE aren't non-nil at the same
+	time. Prefix argument causes the same behavior as FORCE when used
+	interactively.
+
 2005-08-01  johnsu01  <john@wjsullivan.net>
 
 	* planner-delicious.el (planner-delicious-read-date): New function
